tests/error_corpus/validation_errors/E250_secondary_without_primary.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	ERROR: Secondary stress requires primary stress
@Comment:	Invalid: 'ˌhello' - Secondary stress without primary
*CHI:	ˌhello .
@End
