tests/error_corpus/parse_errors/E314_incomplete_annotation.cha
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Annotation bracket incomplete
@Comment:	Invalid: '[' - Bare bracket without content
*CHI:	[ .
@End
